fixes scaleline wrongly aligned on mobile

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -101,6 +101,7 @@
         #scaleline, #copyrights {
             display: block;
             margin-bottom: 1em;
+            width: auto;
         }
         #copyrights a {
             background: rgba(255,255,255,.7);
